testdata/bad/timestamp_37.ion
2004-12-11T12:10-08:1
